force-app/main/default/objects/AWS_Config__mdt/AWS_Config__mdt.object-meta.xml
<CustomObject>
    <description>Used to store the AWS config values</description>
    <label>AWS Config</label>
    <pluralLabel>AWS Configs</pluralLabel>
</CustomObject>