force-app/main/default/objects/AWS_Config__mdt/fields/Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Access_Key__c</fullName>
    <label>Access Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>