force-app/main/default/objects/AWS_Config__mdt/fields/AWS_Region__c.field-meta.xml
<CustomField>
    <fullName>AWS_Region__c</fullName>
    <label>AWS Region</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>