force-app/main/default/objects/AWS_Config__mdt/fields/AWS_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>AWS_Service_Name__c</fullName>
    <label>AWS Service Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>