force-app/main/default/objects/AWS_Config__mdt/fields/Lambda_Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Lambda_Function_Name__c</fullName>
    <description>Specify AWS Lambda function name used to send SMS message</description>
    <inlineHelpText>Specify AWS Lambda function name used to send SMS message</inlineHelpText>
    <label>Lambda Function Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>