force-app/main/default/objects/AWS_Config__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Specify API Gateway method like POST, GET,etc</description>
    <inlineHelpText>Specify API Gateway method like POST, GET,etc</inlineHelpText>
    <label>Method</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>