force-app/main/default/objects/AWS_Config__mdt/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>Specify API Gateway Stage name</description>
    <inlineHelpText>Specify API Gateway Stage name</inlineHelpText>
    <label>Stage Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>